// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavBar with routeButtons > should render with given state from Redux store 1`] = `
<div>
  <div
    class="navbar-slot"
  >
    <mock-appbar
      classname="navbar"
      position="static"
      style="--navbar-progress: 0;"
    >
      <mock-toolbar
        classname="navbar__toolbar"
      >
        <div
          class="navbar__content"
        >
          <div
            class="navbar__brand"
          >
            <mock-iconbutton
              aria-label="Open navigation menu"
              classname="navbar__menu-toggle navbar__menu-toggle--mobile"
              color="inherit"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="MenuIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
                />
              </svg>
            </mock-iconbutton>
            <a
              aria-label="Aqualink home"
              class="navbar__logo"
              data-discover="true"
              href="/"
            >
              Aqua
              <span>
                link
              </span>
            </a>
          </div>
          <nav
            aria-label="Main navigation"
            class="route-buttons"
          >
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-4pqc1o-MuiButtonBase-root-MuiButton-root"
              data-discover="true"
              href="/map"
              tabindex="0"
            >
              Map
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-4pqc1o-MuiButtonBase-root-MuiButton-root"
              href="https://highlights.aqualink.org/"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
            >
              Highlighted sites
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-4pqc1o-MuiButtonBase-root-MuiButton-root"
              data-discover="true"
              href="/tracker"
              tabindex="0"
            >
              Heatwave
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-4pqc1o-MuiButtonBase-root-MuiButton-root"
              href="https://bristlemouth.aqualink.org"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
            >
              Bristlemouth
            </a>
          </nav>
          <div
            class="navbar__actions"
          >
            <mock-tooltip
              title="Translate"
            >
              <mock-iconbutton
                aria-label="Translate"
                classname="navbar__language"
                size="large"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="LanguageIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56m2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"
                  />
                </svg>
              </mock-iconbutton>
            </mock-tooltip>
            <div
              class="navbar__account"
            >
              <span
                class="navbar__user-name"
              >
                Mock User
              </span>
              <mock-iconbutton
                aria-expanded="false"
                aria-label="Open account menu"
                classname="navbar__account-toggle"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ExpandMoreIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </mock-iconbutton>
              <mock-menu
                keepmounted="true"
                menulistprops="[object Object]"
                open="false"
                popoverclasses="[object Object]"
              >
                <mock-divider />
                <mock-menuitem
                  component="[object Object]"
                  to="/dashboard"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                    data-testid="DashboardTwoToneIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M5 5h4v6H5zm10 8h4v6h-4zM5 17h4v2H5zM15 5h4v2h-4z"
                      opacity=".3"
                    />
                    <path
                      d="M3 13h8V3H3zm2-8h4v6H5zm8 16h8V11h-8zm2-8h4v6h-4zM13 3v6h8V3zm6 4h-4V5h4zM3 21h8v-6H3zm2-4h4v2H5z"
                    />
                  </svg>
                  Dashboard
                </mock-menuitem>
                <mock-divider />
                <mock-menuitem>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                    data-testid="PowerSettingsNewIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M13 3h-2v10h2zm4.83 2.17-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83"
                    />
                  </svg>
                  Logout
                </mock-menuitem>
              </mock-menu>
            </div>
            <mock-registerdialog
              open="false"
            />
            <mock-signindialog
              open="false"
            />
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation navbar__register css-1n2lvw3-MuiButtonBase-root-MuiButton-root"
              data-discover="true"
              href="/register"
              tabindex="0"
            >
              Register your site
              <span
                class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeMedium css-1wyk03i-MuiButton-endIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ArrowForwardIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
            </a>
          </div>
        </div>
      </mock-toolbar>
    </mock-appbar>
  </div>
  <mock-menudrawer
    open="false"
  />
</div>
`;

exports[`NavBar without routeButtons > should render with given state from Redux store 1`] = `
<div>
  <div
    class="navbar-slot"
  >
    <mock-appbar
      classname="navbar"
      position="static"
      style="--navbar-progress: 0;"
    >
      <mock-toolbar
        classname="navbar__toolbar"
      >
        <div
          class="navbar__content"
        >
          <div
            class="navbar__brand"
          >
            <mock-iconbutton
              aria-label="Open navigation menu"
              classname="navbar__menu-toggle"
              color="inherit"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="MenuIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
                />
              </svg>
            </mock-iconbutton>
            <a
              aria-label="Aqualink home"
              class="navbar__logo"
              data-discover="true"
              href="/"
            >
              Aqua
              <span>
                link
              </span>
            </a>
          </div>
          <div
            class="navbar__actions"
          >
            <mock-tooltip
              title="Translate"
            >
              <mock-iconbutton
                aria-label="Translate"
                classname="navbar__language"
                size="large"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="LanguageIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56m2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"
                  />
                </svg>
              </mock-iconbutton>
            </mock-tooltip>
            <div
              class="navbar__account"
            >
              <span
                class="navbar__user-name"
              >
                Mock User
              </span>
              <mock-iconbutton
                aria-expanded="false"
                aria-label="Open account menu"
                classname="navbar__account-toggle"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ExpandMoreIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </mock-iconbutton>
              <mock-menu
                keepmounted="true"
                menulistprops="[object Object]"
                open="false"
                popoverclasses="[object Object]"
              >
                <mock-divider />
                <mock-menuitem
                  component="[object Object]"
                  to="/dashboard"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                    data-testid="DashboardTwoToneIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M5 5h4v6H5zm10 8h4v6h-4zM5 17h4v2H5zM15 5h4v2h-4z"
                      opacity=".3"
                    />
                    <path
                      d="M3 13h8V3H3zm2-8h4v6H5zm8 16h8V11h-8zm2-8h4v6h-4zM13 3v6h8V3zm6 4h-4V5h4zM3 21h8v-6H3zm2-4h4v2H5z"
                    />
                  </svg>
                  Dashboard
                </mock-menuitem>
                <mock-divider />
                <mock-menuitem>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                    data-testid="PowerSettingsNewIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M13 3h-2v10h2zm4.83 2.17-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83"
                    />
                  </svg>
                  Logout
                </mock-menuitem>
              </mock-menu>
            </div>
            <mock-registerdialog
              open="false"
            />
            <mock-signindialog
              open="false"
            />
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation navbar__register css-1n2lvw3-MuiButtonBase-root-MuiButton-root"
              data-discover="true"
              href="/register"
              tabindex="0"
            >
              Register your site
              <span
                class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeMedium css-1wyk03i-MuiButton-endIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ArrowForwardIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                  />
                </svg>
              </span>
            </a>
          </div>
        </div>
      </mock-toolbar>
    </mock-appbar>
  </div>
  <mock-menudrawer
    open="false"
  />
</div>
`;
